@@ -46,6 +46,7 @@ Post-v2.17.0
        is started. A failure to create a mempool will now be logged only
        when the VM is started.
    - Userspace datapath:
+     * Improved multi-thread scalability of the userspace connection tracking.
      * 'dpif-netdev/subtable-lookup-prio-get' appctl command renamed to
        'dpif-netdev/subtable-lookup-info-get' to better reflect its purpose.
        The old variant is kept for backward compatibility.
